# cosmic-connect-applet

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile
cosmic-applet-connect/: Cargo.toml
cosmic-applet-connect/i18n/en/: cosmic-applet-connect.ftl
cosmic-applet-connect/src/: app.rs  config.rs  i18n.rs  main.rs
cosmic-applet-connect/src/ui/: device_page.rs  mod.rs
cosmic-applet-connect/src/ui/widgets/: mod.rs
cosmic-applet-connected/: Cargo.toml
cosmic-applet-connected/i18n/en/: cosmic-applet-connected.ftl
cosmic-applet-connected/src/: app.rs  constants.rs  main.rs  notifications.rs  subscriptions.rs
cosmic-applet-connected/src/device/: actions.rs  fetch.rs  mod.rs
cosmic-applet-connected/src/media/: fetch.rs  mod.rs  views.rs
cosmic-applet-connected/src/sms/: fetch.rs  mod.rs  send.rs  views.rs
cosmic-applet-connected/src/views/: helpers.rs  mod.rs  send_to.rs  settings.rs
cosmic-ext-connected/src/: notifications.rs
data/: com.github.cosmic-connect-applet.desktop
docs/: CHANGELOG.md  DBUS.md  SMS.md
kdeconnect-dbus/: Cargo.toml
kdeconnect-dbus/src/: contacts.rs  daemon.rs  device.rs  error.rs  lib.rs
kdeconnect-dbus/src/plugins/: battery.rs  clipboard.rs  findmyphone.rs  mod.rs  mprisremote.rs  notifications.rs  ping.rs  share.rs  sms.rs  telephony.rs
